feat: add published intelligence search
